# thelegacy

AppContainer/AppContainer/: .directory  AppContainer.pro  ApplicationKeepAliveHandler.h  ApplicationKillHandler.h  ApplicationState.h  ApplicationStateDependant.h  ApplicationStatusCollector.h  ApplicationStatusHandler.h  ApplicationTerminateHandler.h  ConfiguredServiceProvider.h  IService.h  IServiceProvider.h  KeepAliveHandler.h  ProcessStatusCollector.h  Service.h  ServiceApplication.h  ServiceApplicationData.h  ServiceBase.h  ServiceData.h  ServiceGroup.h  ServiceStatus.h  ServiceStatusData.h  StatusHandler.h  TestServiceProvider.h  main.cpp
Cryptolytiker/: cryptolytiker.dpr  lytiker.dfm  lytiker.pas  psvHTML.pas  psvSyntax.pas
Cryptolytiker/lib/: FCaesar.dpr
Cryptolytiker/pages/: caesar_1_understand.html  caesar_2_understand.html  style.css
RCMeta/: CMakeLists.txt
RCMeta/RCMeta/: CMakeLists.txt  RCMeta.cpp  RCMeta.h  RCMetaReader.h
RCMeta/RCMeta/Reader/: RCGitReader.cpp  RCGitReader.h  RCSubversionReader.cpp  RCSubversionReader.h
RCMeta/RCMetaTest/: CMakeLists.txt  Main.cpp
SqlDatabase/: SqlDatabase.sln
SqlDatabase/SqlDatabase/: Database.h  DatabaseException.h  DbAccessLayer.h  Defines.h  Result.h  ResultField.h  ResultFieldMetaData.h  ResultRow.h  ResultSet.h  SqlDatabase.vcxproj  (+1 more)
fbpuzzles/: CMakeLists.txt  Defines.h  Puzzle.cpp  Puzzle.h
fbpuzzles/breathalyzer/: CMakeLists.txt  Dictionary.h  Main.cpp  Puzzle.cpp  Puzzle.h
fbpuzzles/meepmeep/: CMakeLists.txt  Main.cpp  Puzzle.h
nucleareducated/: index.html
worstframework/: index.php
(+157 files in other folders)
